--- a/CustomTableCell/Base.lproj/Main.storyboard
+++ b/CustomTableCell/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,32 +19,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a67-ED-jdk">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="cp7-TK-xgd">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AYU-FD-Wjb"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dTR-nJ-N9e">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="QI6-nL-sRr" customClass="CustomCell" customModule="CustomTableCell" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QI6-nL-sRr" id="nnr-OP-geK" customClass="UITableViewCell" customModule="CustomTableCell" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Uol-3Y-cxb">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a67-ED-jdk">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <items>
+                                            <navigationItem title="Title" id="cp7-TK-xgd">
+                                                <barButtonItem key="rightBarButtonItem" systemItem="add" id="AYU-FD-Wjb"/>
+                                            </navigationItem>
+                                        </items>
+                                    </navigationBar>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dTR-nJ-N9e">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="603"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="QI6-nL-sRr" customClass="CustomCell" customModule="CustomTableCell" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QI6-nL-sRr" id="nnr-OP-geK" customClass="UITableViewCell" customModule="CustomTableCell" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zDj-i3-s3a">
+                                                            <rect key="frame" x="0.0" y="0.0" width="415" height="43.5"/>
+                                                            <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8S-h3-run" userLabel="View1">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="124.5" height="43.5"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </view>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uw7-rQ-xUL">
+                                                                    <rect key="frame" x="124.5" y="0.0" width="166" height="43.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QpO-tQ-wn7" userLabel="View2">
+                                                                    <rect key="frame" x="290.5" y="0.0" width="124.5" height="43.5"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </view>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="T8S-h3-run" firstAttribute="height" secondItem="zDj-i3-s3a" secondAttribute="height" id="2z4-tM-4nb"/>
+                                                                <constraint firstItem="uw7-rQ-xUL" firstAttribute="width" secondItem="zDj-i3-s3a" secondAttribute="width" multiplier="0.4" id="B92-du-5AT"/>
+                                                                <constraint firstItem="T8S-h3-run" firstAttribute="width" secondItem="zDj-i3-s3a" secondAttribute="width" multiplier="0.3" id="JaB-cB-sSk"/>
+                                                                <constraint firstItem="uw7-rQ-xUL" firstAttribute="height" secondItem="zDj-i3-s3a" secondAttribute="height" id="tz8-iM-eiT"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="zDj-i3-s3a" firstAttribute="centerY" secondItem="nnr-OP-geK" secondAttribute="centerY" id="4d9-o7-mFv"/>
+                                                        <constraint firstItem="zDj-i3-s3a" firstAttribute="centerY" secondItem="nnr-OP-geK" secondAttribute="centerY" id="Gor-Wc-Syh"/>
+                                                        <constraint firstItem="zDj-i3-s3a" firstAttribute="width" secondItem="nnr-OP-geK" secondAttribute="width" id="J5u-Zz-DZf"/>
+                                                        <constraint firstItem="zDj-i3-s3a" firstAttribute="height" secondItem="nnr-OP-geK" secondAttribute="height" id="nJb-2e-Xaa"/>
+                                                        <constraint firstItem="zDj-i3-s3a" firstAttribute="centerX" secondItem="nnr-OP-geK" secondAttribute="centerX" id="otm-5N-VmE"/>
+                                                        <constraint firstItem="zDj-i3-s3a" firstAttribute="centerX" secondItem="nnr-OP-geK" secondAttribute="centerX" id="rTp-7e-t8E"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="label" destination="uw7-rQ-xUL" id="9pA-ct-zGd"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Uol-3Y-cxb" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" id="4vY-F6-Un4"/>
+                            <constraint firstItem="Uol-3Y-cxb" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="EWH-bW-M3x"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerY" secondItem="Uol-3Y-cxb" secondAttribute="centerY" id="ZXT-cK-GVW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerX" secondItem="Uol-3Y-cxb" secondAttribute="centerX" id="fdF-H1-guy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
